<resources>
    <string name="app_name">GeoQuiz</string>

    <string name="next_button">Next</string>
    <string name="prev_button">Previous</string>
    <string name="true_button">true</string>
    <string name="false_button">false</string>

    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>

    <string name="question_australia">1. Canberra is the capital of Australia.</string>
    <string name="question_oceans">2. The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">3. The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">4. The source of the Nile River is in Egypt.</string>
    <string name="question_americas">5. The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">6. Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>

    <string name="correct_answers">Correct answers: %d</string>
    <string name="cheated_answers">Cheated answers: %d</string>

    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong.</string>
</resources>